<resources>
    <string name="app_name">Conrad</string>
    <string name="title_home">Gadgets</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="amb_temp">Ambient Temperature</string>
    <string name="init_temp">0.0</string>
    <string name="adc3">ADC3</string>
    <string name="adc4">ADC4</string>
    <string name="adc5">ADC5</string>
    <string name="init_zero">0</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="dac1">DAC1</string>
    <string name="pwm3">PWM3 - MOTOR DUTY</string>
    <string name="pwm4">PWM4</string>
    <string name="pwm5">PWM5</string>
    <string name="pwm6">PWM6</string>

</resources>
